added support for grouping by namespaces (see #2)

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -46,9 +46,19 @@
             <div class="index">
                 <nav>
                     <ul>
-                        {{#docs}}
+                        {{#namespaces}}
+                        <li class="nav-header">
+                            {{#constructorMethod}}
+                            <a href="#{{identifier}}">{{name}}</a>
+                            {{/constructorMethod}}
+                            {{^constructorMethod}}
+                            {{namespace}}
+                            {{/constructorMethod}}
+                        </li>
+                        {{#methods}}
                         <li><a href="#{{identifier}}">{{shortName}}</a></li>
-                        {{/docs}}
+                        {{/methods}}
+                        {{/namespaces}}
                     </ul>
                 </nav>
             </div>
