--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -55,9 +55,9 @@
                             {{namespace}}
                             {{/constructorMethod}}
                         </li>
-                        {{#methods}}
+                        {{#members}}
                         <li><a href="#{{identifier}}">{{shortName}}</a></li>
-                        {{/methods}}
+                        {{/members}}
                         {{/namespaces}}
                     </ul>
                 </nav>
