...except crap, I forgot that won't work

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -13,6 +13,7 @@
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://danieltao.com/HighTables/hightables.js"></script>
     <script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
+    <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="docs.js"></script>
 
     {{#javascripts}}
