updated order so static members come first
also added different CSS class based on constructor/method

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -71,7 +71,7 @@
 
                 {{#namespaces}}
                 {{#allMembers}}
-                <section class="method" id="{{identifier}}">
+                <section class="{{sectionType}}" id="{{identifier}}">
                     <h1>
                         {{shortName}}
                         <small>{{name}}</small>
