implemented a really hacky approach to #5
so... this works, but I have to admit this project has gotten
pretty out of hand at this point. it's just hack upon hack, with
very little regard for overall quality or even a generally sound
design. so I'm going to push, and then take a step back and
rethink.

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -191,7 +191,15 @@
                         (function() {
                           var spec = it('returns {{output}} for {{input}}', function() {
                             var result = {{{input}}};
+                            {{#customHandler}}
+                            var handler = exampleHandlers[{{handlerIndex}}],
+                                match   = {{{outputPattern}}}.match(handler.pattern);
+
+                            handler.test(match, result);
+                            {{/customHandler}}
+                            {{^customHandler}}
                             assertEquality(result, {{{output}}});
+                            {{/customHandler}}
                           });
 
                           spec.exampleId = '{{identifier}}-{{id}}';
