fixed wrong argument order in docs template
...next up: using partials to share this stuff between docs and
examples templates (you know, DRY and all)

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -27,7 +27,7 @@
       // in doc_helper.js; so we'll only use this default implementation if
       // necessary.
       if (typeof window.assertEquality === 'undefined') {
-        window.assertEquality = function(actual, expected) {
+        window.assertEquality = function(expected, actual) {
           expect(expected).toEqual(actual);
         };
       }
@@ -199,7 +199,7 @@
                             handler.test(match, result);
                             {{/hasCustomHandler}}
                             {{^hasCustomHandler}}
-                            assertEquality(result, {{{output}}});
+                            assertEquality({{{output}}}, result);
                             {{/hasCustomHandler}}
                           });
 
