--- a/resources/stylesheets/docs.css
+++ b/resources/stylesheets/docs.css
@@ -1495,16 +1495,28 @@ table > tbody > tr > th.danger,
 table > tfoot > tr > th.danger,
 .table > thead > tr.danger > td,
 table > thead > tr.danger > td,
+table .table > thead > tr.failed > td,
+table > thead > tr.failed > td,
 .table > tbody > tr.danger > td,
 table > tbody > tr.danger > td,
+table .table > tbody > tr.failed > td,
+table > tbody > tr.failed > td,
 .table > tfoot > tr.danger > td,
 table > tfoot > tr.danger > td,
+table .table > tfoot > tr.failed > td,
+table > tfoot > tr.failed > td,
 .table > thead > tr.danger > th,
 table > thead > tr.danger > th,
+table .table > thead > tr.failed > th,
+table > thead > tr.failed > th,
 .table > tbody > tr.danger > th,
 table > tbody > tr.danger > th,
+table .table > tbody > tr.failed > th,
+table > tbody > tr.failed > th,
 .table > tfoot > tr.danger > th,
-table > tfoot > tr.danger > th {
+table > tfoot > tr.danger > th,
+table .table > tfoot > tr.failed > th,
+table > tfoot > tr.failed > th {
   background-color: #e74c3c;
   border-color: #e74c3c; }
 
@@ -1512,7 +1524,9 @@ table > tfoot > tr.danger > th {
 .table-hover > tbody > tr > th.danger:hover,
 table > tbody > tr > th.danger:hover,
 .table-hover > tbody > tr.danger:hover > td,
-table > tbody > tr.danger:hover > td {
+table > tbody > tr.danger:hover > td,
+table .table-hover > tbody > tr.failed:hover > td,
+table > tbody > tr.failed:hover > td {
   background-color: #e43725;
   border-color: #e43725; }
 
@@ -1529,28 +1543,16 @@ table > tbody > tr > th.warning,
 table > tfoot > tr > th.warning,
 .table > thead > tr.warning > td,
 table > thead > tr.warning > td,
-.signature table tfoot .table > thead > tr > td,
-.signature table tfoot table > thead > tr > td,
 .table > tbody > tr.warning > td,
 table > tbody > tr.warning > td,
-.signature table tfoot .table > tbody > tr > td,
-.signature table tfoot table > tbody > tr > td,
 .table > tfoot > tr.warning > td,
 table > tfoot > tr.warning > td,
-.signature table .table > tfoot > tr > td,
-.signature table > tfoot > tr > td,
 .table > thead > tr.warning > th,
 table > thead > tr.warning > th,
-.signature table tfoot .table > thead > tr > th,
-.signature table tfoot table > thead > tr > th,
 .table > tbody > tr.warning > th,
 table > tbody > tr.warning > th,
-.signature table tfoot .table > tbody > tr > th,
-.signature table tfoot table > tbody > tr > th,
 .table > tfoot > tr.warning > th,
-table > tfoot > tr.warning > th,
-.signature table .table > tfoot > tr > th,
-.signature table > tfoot > tr > th {
+table > tfoot > tr.warning > th {
   background-color: #f39c12;
   border-color: #f39c12; }
 
@@ -1558,9 +1560,7 @@ table > tfoot > tr.warning > th,
 .table-hover > tbody > tr > th.warning:hover,
 table > tbody > tr > th.warning:hover,
 .table-hover > tbody > tr.warning:hover > td,
-table > tbody > tr.warning:hover > td,
-.signature table tfoot .table-hover > tbody > tr:hover > td,
-.signature table tfoot table > tbody > tr:hover > td {
+table > tbody > tr.warning:hover > td {
   background-color: #e08e0b;
   border-color: #e08e0b; }
 
@@ -6194,9 +6194,9 @@ td.visible-print {
 .table tr.success, table tr.success,
 .table tr.warning,
 table tr.warning,
-.signature table tfoot tr,
 .table tr.danger,
-table tr.danger {
+table tr.danger,
+table tr.failed {
   color: #fff; }
 
 .form-control,
@@ -6358,6 +6358,15 @@ body {
 
 nav {
   border-right: 1px solid black; }
+  nav ul li.nav-header {
+    font-weight: bold;
+    padding-left: 15px; }
+
+table th p, table td p {
+  margin: 0; }
+
+.signature table tfoot tr {
+  background-color: #b1c2c6; }
 
 .examples table th, .examples table td {
   width: 40%; }
