--- a/resources/examples.js.mustache
+++ b/resources/examples.js.mustache
@@ -5,30 +5,7 @@ describe('{{variable}}', function() {
   {{#hasExamples}}
   describe('{{namespace}}', function() {
     {{#allMembers}}
-    {{#hasExamples}}
-    describe('{{shortName}}', function() {
-        {{#examples}}
-        {{{setup}}}
-        {{#list}}
-        {{#hasCustomHandler}}
-        it('{{{inputForJs}}} => {{{outputForJs}}}', function() {
-            var handler = exampleHandlers[{{handlerIndex}}];
-            var result  = {{{input}}};
-            var match   = {{{outputPattern}}}.match(handler.pattern);
-            handler.test(match, result);
-        });
-        {{/hasCustomHandler}}
-        {{^hasCustomHandler}}
-        it('{{{inputForJs}}} => {{{outputForJs}}}', function() {
-            var result   = {{{input}}};
-            var expected = {{{output}}};
-            assertEquality(expected, result);
-        });
-        {{/hasCustomHandler}}
-        {{/list}}
-        {{/examples}}
-    });
-    {{/hasExamples}}
+      {{> memberSpec}}
     {{/allMembers}}
   });
   {{/hasExamples}}
