added cli support for -p (perf) option

--- a/resources/examples.js.mustache
+++ b/resources/examples.js.mustache
@@ -5,7 +5,7 @@ describe('{{variable}}', function() {
   {{#hasExamples}}
   describe('{{namespace}}', function() {
     {{#allMembers}}
-      {{> memberSpec}}
+      {{> examples}}
     {{/allMembers}}
   });
   {{/hasExamples}}
