--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -182,37 +182,8 @@
                     {{/hasBenchmarks}}
 
                     <script type="text/javascript">
-                      {{> memberSpec}}
-
-                      {{#hasBenchmarks}}
-                      (function() {
-                        {{#benchmarks}}
-
-                        {{{setup}}}
-
-                        benchmarks['{{identifier}}'] = [];
-
-                        {{#list}}
-                        {{#cases}}
-                        (function() {
-                          var benchmark = new Benchmark('{{name}}', {
-                            id: '{{identifier}}-{{id}}-{{caseId}}',
-                            fn: function() {
-                              {{{impl}}};
-                            }
-                          });
-
-                          benchmark.benchmarkId = '{{identifier}}-{{id}}';
-                          benchmark.caseId = {{caseId}};
-
-                          benchmarks['{{identifier}}'].push(benchmark);
-                        }());
-
-                        {{/cases}}
-                        {{/list}}
-                        {{/benchmarks}}
-                      }());
-                      {{/hasBenchmarks}}
+                      {{> examples}}
+                      {{> benchmarks}}
                     </script>
                 </section>
                 {{/allMembers}}
