made it so that filtering by tag doesn't apply to examples + benchmarks
...but wait, maybe it should?

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -71,6 +71,7 @@
 
                 {{#namespaces}}
                 {{#allMembers}}
+                {{^excludeFromDocs}}
                 <section class="{{sectionType}}" id="{{identifier}}">
                     <h1>
                         {{shortName}}
@@ -186,6 +187,7 @@
                       {{> benchmarks}}
                     </script>
                 </section>
+                {{/excludeFromDocs}}
                 {{/allMembers}}
                 {{/namespaces}}
             </article>
