fancied up console output when running benchmarks w/ -p option

--- a/resources/_benchmarks.js.mustache
+++ b/resources/_benchmarks.js.mustache
@@ -1,5 +1,7 @@
 {{#hasBenchmarks}}
 (function() {
+  var functionName = '{{name}}';
+
   {{#benchmarks}}
 
   {{{setup}}}
@@ -16,6 +18,7 @@
       }
     });
 
+    benchmark.functionName = functionName;
     benchmark.benchmarkId = '{{identifier}}-{{id}}';
     benchmark.caseId = {{caseId}};
 
