--- a/resources/examples.js.mustache
+++ b/resources/examples.js.mustache
@@ -1,6 +1,9 @@
 global.{{variable}} = require('{{{filePath}}}');
 
 describe('{{variable}}', function() {
+  {{#privateMembers}}
+  var {{shortName}} = {{{source}}};
+  {{/privateMembers}}
   {{#namespaces}}
   {{#hasExamples}}
   describe('{{namespace}}', function() {
