--- a/resources/examples.js.mustache
+++ b/resources/examples.js.mustache
@@ -3,6 +3,10 @@ global.{{variable}} = require('{{{filePath}}}');
 var jasmine  = require('jasmine-node'),
     env      = jasmine.getEnv(),
     utils    = require(path.join(__dirname, '../resources/javascripts/utils')),
+    defaults = require(path.join(__dirname, '../resources/javascripts/defaults'));
+
+global.exampleHandlers = defaults.exampleHandlers;
+global.assertEquality  = defaults.assertEquality;
 
 var reporterType = _commander.verbose ?
   jasmine.TerminalVerboseReporter :
