--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -20,17 +20,10 @@
     <script type="text/javascript" src="{{{.}}}"></script>
     {{/javascripts}}
 
+    <script type="text/javascript" src="defaults.js"></script>
+
     <script type="text/javascript">
       var benchmarks = {};
-
-      // A client library may have defined a custom assertEquality method, e.g.
-      // in doc_helper.js; so we'll only use this default implementation if
-      // necessary.
-      if (typeof window.assertEquality === 'undefined') {
-        window.assertEquality = function(expected, actual) {
-          expect(expected).toEqual(actual);
-        };
-      }
     </script>
 </head>
 
