--- a/resources/benchmarks.js.mustache
+++ b/resources/benchmarks.js.mustache
@@ -1,5 +1,9 @@
 global.{{variable}} = require('{{{filePath}}}');
 
+{{#globals}}
+global.{{variable}} = require('{{library}}');
+{{/globals}}
+
 var path      = require('path'),
     utils     = require(path.join(__dirname, '../resources/javascripts/utils')),
     Benchmark = require('benchmark'),
