--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -133,8 +133,8 @@
                             <tbody>
                                 {{#list}}
                                 <tr id="example-{{identifier}}-{{id}}">
-                                    <td>{{{input}}}</td>
-                                    <td>{{{output}}}</td>
+                                    <td>{{{actual}}}</td>
+                                    <td>{{{expected}}}</td>
                                     <td></td>
                                 </tr>
                                 {{/list}}
