exclude links from index as appropriate

--- a/resources/docs.html.mustache
+++ b/resources/docs.html.mustache
@@ -50,7 +50,9 @@
                             {{/constructorMethod}}
                         </li>
                         {{#members}}
+                        {{^excludeFromDocs}}
                         <li><a href="#{{identifier}}">{{shortName}}</a></li>
+                        {{/excludeFromDocs}}
                         {{/members}}
                         {{/namespaces}}
                     </ul>
