--- a/resources/stylesheets/docs.css
+++ b/resources/stylesheets/docs.css
@@ -780,27 +780,29 @@ main:after {
 .col-sm-12,
 .col-md-1,
 .col-md-2,
-.layout .index,
 .col-md-3,
+.layout .index,
 .col-md-4,
 .col-md-5,
 .col-md-6,
 .col-md-7,
 .col-md-8,
 .col-md-9,
-.col-md-10,
 .layout article,
+.col-md-10,
 .col-md-11,
 .col-md-12,
 .col-lg-1,
 .col-lg-2,
 .col-lg-3,
+.layout .index,
 .col-lg-4,
 .col-lg-5,
 .col-lg-6,
 .col-lg-7,
 .col-lg-8,
 .col-lg-9,
+.layout article,
 .col-lg-10,
 .col-lg-11,
 .col-lg-12 {
@@ -1015,26 +1017,26 @@ main:after {
 
   .col-md-1,
   .col-md-2,
-  .layout .index,
   .col-md-3,
+  .layout .index,
   .col-md-4,
   .col-md-5,
   .col-md-6,
   .col-md-7,
   .col-md-8,
   .col-md-9,
-  .col-md-10,
   .layout article,
+  .col-md-10,
   .col-md-11 {
     float: left; }
 
   .col-md-1 {
     width: 8.333333333333332%; }
 
-  .col-md-2, .layout .index {
+  .col-md-2 {
     width: 16.666666666666664%; }
 
-  .col-md-3 {
+  .col-md-3, .layout .index {
     width: 25%; }
 
   .col-md-4 {
@@ -1052,10 +1054,10 @@ main:after {
   .col-md-8 {
     width: 66.66666666666666%; }
 
-  .col-md-9 {
+  .col-md-9, .layout article {
     width: 75%; }
 
-  .col-md-10, .layout article {
+  .col-md-10 {
     width: 83.33333333333334%; }
 
   .col-md-11 {
@@ -1178,12 +1180,14 @@ main:after {
   .col-lg-1,
   .col-lg-2,
   .col-lg-3,
+  .layout .index,
   .col-lg-4,
   .col-lg-5,
   .col-lg-6,
   .col-lg-7,
   .col-lg-8,
   .col-lg-9,
+  .layout article,
   .col-lg-10,
   .col-lg-11 {
     float: left; }
@@ -1194,7 +1198,7 @@ main:after {
   .col-lg-2 {
     width: 16.666666666666664%; }
 
-  .col-lg-3 {
+  .col-lg-3, .layout .index {
     width: 25%; }
 
   .col-lg-4 {
@@ -1212,7 +1216,7 @@ main:after {
   .col-lg-8 {
     width: 66.66666666666666%; }
 
-  .col-lg-9 {
+  .col-lg-9, .layout article {
     width: 75%; }
 
   .col-lg-10 {
@@ -6361,6 +6365,8 @@ nav {
   nav ul li.nav-header {
     font-weight: bold;
     padding-left: 15px; }
+    nav ul li.nav-header a {
+      margin-left: -15px; }
 
 table th p, table td p {
   margin: 0; }
