added lineNumber to ExampleInfo

--- a/resources/_examples.js.mustache
+++ b/resources/_examples.js.mustache
@@ -26,6 +26,7 @@ describe('{{shortName}}', function() {
     spec.exampleId = '{{identifier}}-{{id}}';
     spec.actual = '{{{actualEscaped}}}';
     spec.expected = '{{{expectedEscaped}}}';
+    spec.lineNumber = {{lineNumber}};
   }());
   {{/list}}
   {{/examples}}
